# LFPlayer

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/lfplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/asset/: fragmentshader.glsl  vertextshader.glsl
app/src/main/cpp/: CMakeLists.txt  anativewindowplayer.cpp  audio_play.cpp  encodeH264.cpp  lfplayer.cpp  main.cpp  openglplayer.cpp  openslesplayer.cpp  pcmplayer.cpp  video_play.cpp  yuvplayer.cpp
app/src/main/cpp/include/: yuvplayer.h
app/src/main/cpp/include/SDL2/: SDL_android.h  SDL_config.h
app/src/main/cpp/include/player/: lfplayer.h  lfplayerutils.h  pcmplayer.h  yuvplayer.h
app/src/main/java/com/example/lfplayer/: AudioPlayActivity.java  AudioRecordActivity.java  BaseSelectMediaFileActivity.java  EncodeH264Activity.java  FileUtils.kt  MainActivity.java  NativeOpenGLActivity.java  SurfacePlayerActivity.java  Utils.kt
app/src/main/java/com/example/lfplayer/encoder/: AbstractEncoder.java  H264AACEncoder.java  H264Encoder.java  IAudioEncoder.java  IEncoder.java  IVideoEncoder.java  MediaCodecEncoder.java
app/src/main/java/com/example/lfplayer/record/: AudioRecordHelper.java  IAudioRecord.java
app/src/main/java/com/example/lfplayer/utils/: FileUtils.kt  Utils.kt  WorkHandler.java
app/src/main/java/com/example/lfplayer/view/: CameraSurfaceView.java  CameraXView.java  ICameraView.java
app/src/main/java/org/libsdl/app/: DummyEdit.java  SDLActivity.java  SDLClipboardHandler_API11.java  SDLInputConnection.java  SDLSelectMediaFileActivity.java  SDLSurface.java
app/src/main/java/surfaceplayer/: SurfaceCallback.java  SurfacePlayerActivity.java
app/src/main/res/layout/: activity_audio_play.xml  activity_audio_record.xml  activity_encode_h264.xml  activity_main.xml  activity_native_open_gl.xml  activity_sdl_player.xml  activity_sdl_select_media_file.xml  activity_surface_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/lfplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
